--- a/create_service.yml
+++ b/create_service.yml
@@ -3,3 +3,4 @@ Update added on 2023-08-02
 Update added on 2023-08-03
 Update added on 2023-08-04
 Update added on 2023-08-05
+Update added on 2023-08-06
