Backdated update on 2023-08-07

--- a/create_service.yml
+++ b/create_service.yml
@@ -4,3 +4,4 @@ Update added on 2023-08-03
 Update added on 2023-08-04
 Update added on 2023-08-05
 Update added on 2023-08-06
+Update added on 2023-08-07
