Backdated update on 2023-08-08

--- a/create_service.yml
+++ b/create_service.yml
@@ -5,3 +5,4 @@ Update added on 2023-08-04
 Update added on 2023-08-05
 Update added on 2023-08-06
 Update added on 2023-08-07
+Update added on 2023-08-08
