--- a/roles/snow_incident_in_progress/tasks/update_ticket_to_in_progress.yml
+++ b/roles/snow_incident_in_progress/tasks/update_ticket_to_in_progress.yml
@@ -1,3 +1,3 @@
 ---
-- name: Change servicenow incident ticket to in_progress
+- name: Change servicenow incident ticket to 'in_progress'
   include_tasks: update_ticket_to_in_progress.yml
