--- a/create_service.yml
+++ b/create_service.yml
@@ -9,3 +9,4 @@ Update added on 2023-08-08
 Update added on 2023-08-09
 Update added on 2023-08-10
 Update added on 2023-08-11
+Update added on 2023-08-12
