--- a/molecule/default/inventory.ini
+++ b/molecule/default/inventory.ini
@@ -1,6 +1,6 @@
-[deltek_automation]
+[automation]
 18.209.99.27
-[deltek_automation:vars]
+[automation:vars]
 ansible_connection=winrm
 ansible_user="{{user}}"
 ansible_password="{{password}}"
