--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
   author: Odira Samuel
   description: Install Crowdstrike
-  company: Deltek
+  company: "#####"
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
