Backdated update on 2023-08-15

--- a/create_service.yml
+++ b/create_service.yml
@@ -12,3 +12,4 @@ Update added on 2023-08-11
 Update added on 2023-08-12
 Update added on 2023-08-13
 Update added on 2023-08-14
+Update added on 2023-08-15
