Backdated update on 2023-08-19

--- a/create_service.yml
+++ b/create_service.yml
@@ -16,3 +16,4 @@ Update added on 2023-08-15
 Update added on 2023-08-16
 Update added on 2023-08-17
 Update added on 2023-08-18
+Update added on 2023-08-19
