Backdated update on 2023-08-22

--- a/create_service.yml
+++ b/create_service.yml
@@ -19,3 +19,4 @@ Update added on 2023-08-18
 Update added on 2023-08-19
 Update added on 2023-08-20
 Update added on 2023-08-21
+Update added on 2023-08-22
