Backdated update on 2023-08-24

--- a/create_service.yml
+++ b/create_service.yml
@@ -21,3 +21,4 @@ Update added on 2023-08-20
 Update added on 2023-08-21
 Update added on 2023-08-22
 Update added on 2023-08-23
+Update added on 2023-08-24
