Modify check_running playbook to be able to automatically determine the right become_method to use for each machine's OS type

--- a/playbooks/check_running.yml
+++ b/playbooks/check_running.yml
@@ -1,9 +1,15 @@
 ---
 - name: Check if CrowdStrike Service is running
   hosts: all
+  gather_facts: true
+  become: true
+  become_method: "{{ (ansible_facts['os_family'] == 'Windows') | ternary('runas', 'sudo') }}"
+  become_user: "{{ svc_user }}"
+  remote_user: "{{ svc_user }}"
+
   vars_files:
-    - vars/connection_info.yml
-    - defaults/main.yml
+    - vars/{{ ansible_facts['os_family'] }}.yml
+  
   tasks:
     - name: wait for hosts to be available
       wait_for_connection:
@@ -11,27 +17,19 @@
         timeout: 900
         sleep: 60
       tags: always
-    
-    - name: Linux Tasks
-      block:
-        - name: Include Linux Specific Variables
-          include_vars:
-            file: vars/linux.yml
 
-        - name: Check if service is running
-          roles:
-            - crowdstrike_agent_running_check_linux
+    - name: Check if CrowdStrike Service is running on Linux
+      include_role:
+        name: ../../
+        tasks_from: is_crowdstrike_running_linux
       when:
         - ansible_facts['os_family'] == "Linux"
+      tags: status
 
-    - name: Windows Tasks
-      block:
-        - name: Include Windows Specific Variables
-          include_vars:
-            file: vars/windows.yml
-
-        - name: Check if service is running
-          roles:
-            - crowdstrike_agent_running_check_windows
+    - name: Check if CrowdStrike Service is running on Windows
+      include_role:
+        name: ../../
+        tasks_from: is_crowdstrike_running_windows
       when:
         - ansible_facts['os_family'] == "Windows"
+      tags: status
