Modify install_agent playbook to be able to automatically determine the right become_method to use for each machine's OS type

--- a/playbooks/install_agent.yml
+++ b/playbooks/install_agent.yml
@@ -1,9 +1,15 @@
 ---
 - name: Install CrowdStrike Agent
   hosts: all
+  gather_facts: true
+  become: true
+  become_method: "{{ (ansible_facts['os_family'] == 'Windows') | ternary('runas', 'sudo') }}"
+  become_user: "{{ svc_user }}"
+  remote_user: "{{ svc_user }}"
+
   vars_files:
-    - vars/connection_info.yml
-    - defaults/main.yml
+    - vars/{{ ansible_facts['os_family'] }}.yml
+
   tasks:
     - name: wait for hosts to be available
       wait_for_connection:
@@ -11,27 +17,19 @@
         timeout: 900
         sleep: 60
       tags: always
-    
-    - name: Linux Tasks
-      block:
-        - name: Include Linux Specific Variables
-          include_vars:
-            file: vars/linux.yml
 
-        - name: Install CrowdStrike agent in Linux
-          roles:
-            - install_crowdstrike_linux
+    - name: Install CrowdStrike agent in Linux
+      include_role:
+        name: ../../
+        tasks_from: crowdstrike_install_linux
       when:
         - ansible_facts['os_family'] == "Linux"
+      tags: install
 
-    - name: Windows Tasks
-      block:
-        - name: Include Windows Specific Variables
-          include_vars:
-            file: vars/windows.yml
-
-        - name: Install CrowdStrike agent in Linux
-          roles:
-            - install_crowdstrike_windows
+    - name: Install CrowdStrike agent in Windows
+      include_role:
+        name: ../../
+        tasks_from: crowdstrike_install_windows
       when:
         - ansible_facts['os_family'] == "Windows"
+      tags: install
