--- a/tasks/is_crowdstrike_installed_linux.yml
+++ b/tasks/is_crowdstrike_installed_linux.yml
@@ -1,17 +1,11 @@
----
 # Check if crowdstrike is installed (Linux)
-- name: Check if CrowdStrike is installed
-  stat:
-    path: /opt/CrowdStrike/falconctl
-  register: result
-  tags: status
-
-- name: Set fact based on CrowdStrike Service install status
-  set_fact:
-    crowdstrike_installed: "{{ result.stat.exists }}"
-  tags: status
+- name: Gather service facts
+  service_facts:
+  register: service_facts
+  tags: install
 
 - name: Write CrowdStrike Service install status to stdout
   debug:
-    var: crowdstrike_installed
+    msg: "crowdstrike_installed: {{ 'true' if linux_cs_service in service_facts.ansible_facts.services else 'false' }}"
+  when: service_facts is defined
   tags: status
