--- a/tasks/crowdstrike_restart_linux.yml
+++ b/tasks/crowdstrike_restart_linux.yml
@@ -1,62 +1,87 @@
----
-# Check init system of the Linux machine
-- name: Check init system being used
-  command: systemctl --version
-  ignore_errors: true
-  register: init_system_check
+# Restart CrowdStrike Service on Linux
+- name: Gather service facts
+  service_facts:
+  register: service_facts
   tags: restart
 
-# Restart crowdstrike with init system of the Linux machine
+# Restart CrowdStrike Service
 - name: Restart CrowdStrike Service
   block:
-    - name: Restart CrowdStrike Falcon Sensor Service with Systemd
-      systemd:
-        name: "{{ linux_crowdstrike_service_name }}"
-        state: restarted
-      register: service_restart_result
-      until: service_restart_result is not failed
-      retries: 3
-      delay: 60
-      ignore_errors: true
-      when: init_system_check.rc == 0
+  - name: Stop Crowdstrike Service when init system is Systemd
+    ansible.builtin.systemd:
+      name: "{{ linux_crowdstrike_service_name }}"
+      state: stopped
+    register: service_stopped_systemd
+    until: service_stopped_systemd.failed == false
+    retries: 3
+    delay: 60
+    ignore_errors: true
+    when:
+    - service_facts.ansible_facts.services[linux_cs_service].source == "systemd"
 
-    - name: Restart CrowdStrike Falcon Sensor Service with SysVinit
-      service:
-        name: "{{ linux_crowdstrike_service_name }}"
-        state: restarted
-      register: service_restart_result
-      until: service_restart_result is not failed
-      retries: 3
-      delay: 60
-      ignore_errors: true
-      when: init_system_check.rc != 0
-  when: init_system_check
+  - name: Pause for 30 seconds
+    pause:
+      seconds: 30
+
+  - name: Start Crowdstrike Service when init system is Systemd
+    ansible.builtin.systemd:
+      name: "{{ linux_crowdstrike_service_name }}"
+      state: started
+    register: service_restarted_systemd
+    until: service_restarted_systemd.failed == false
+    retries: 3
+    delay: 60
+    ignore_errors: true
+    when:
+    - service_facts.ansible_facts.services[linux_cs_service].source == "systemd"
+    - service_stopped_systemd.state == "stopped"
+
+  - name: Stop Crowdstrike Service when init system is SysVinit
+    ansible.builtin.sysvinit:
+      name: "{{ linux_crowdstrike_service_name }}"
+      state: stopped
+    register: service_stopped_sysv
+    until: service_stopped_sysv.failed == false
+    retries: 3
+    delay: 60
+    ignore_errors: true
+    when:
+    - service_facts.ansible_facts.services[linux_cs_service].source == "sysv"
+
+  - name: Pause for 30 seconds
+    pause:
+      seconds: 30
+
+  - name: Start Crowdstrike Service when init system is SysVinit
+    ansible.builtin.sysvinit:
+      name: "{{ linux_crowdstrike_service_name }}"
+      state: started
+    register: service_restarted_sysv
+    until: service_restarted_sysv.failed == false
+    retries: 3
+    delay: 60
+    ignore_errors: true
+    when:
+    - service_facts.ansible_facts.services[linux_cs_service].source == "sysv"
+    - service_stopped_sysv.state == "stopped"
+  when: service_facts is defined
   tags: restart
 
-- name: Validate Service restarted
-  assert:
-    that:
-      - service_restart_result.state == "running" and service_restart_result.changed == true
-    fail_msg: "Crowdstrike service fails to restart"
-    success_msg: "Crowdstrike service successfully restarted"
-  ignore_errors: true
-  register: service_restart_result
-  when: service_restart_result is defined
-  tags: validate
+  rescue:
+  - name: Write out error message
+    debug:
+      msg: "Failed to restart CrowdStrike service"
+    tags: restart
 
-- name: Set fact based on CrowdStrike Service restart failure
-  set_fact:
-    crowdstrike_service_restart_status: "Crowdstrike service fails to restart"
-  when: service_restart_result.failed == true
-  tags: restart
-
-- name: Set fact based on CrowdStrike Service restart success
-  set_fact:
-    crowdstrike_service_restart_status: "Crowdstrike service successfully restarted"
-  when: service_restart_result.failed == false
-  tags: restart
-
-- name: Write CrowdStrike Service restart status to stdout
+# Write service restart status to stdoutS
+- name: Write CrowdStrike Service restart status systemd to stdout
   debug:
-    var: crowdstrike_service_restart_status
-  when: crowdstrike_service_restart_status is defined
+    msg: "crowdstrike_restarted_systemd: {{ service_restarted_systemd.changed | default(false) }}"
+  when: service_restarted_systemd is defined
+  tags: restart
+
+- name: Write CrowdStrike Service restart status sysv to stdout
+  debug:
+    msg: "crowdstrike_restarted_sysv: {{ service_restarted_sysv.changed | default(false) }}"
+  when: crowdstrike_restarted_sysv is defined
+  tags: restart
